// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DeviceTrust.tsx empty EUB cta 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-top: 24px;
  width: 100%;
}

.c12 {
  box-sizing: border-box;
  max-width: 700px;
  padding: 24px;
}

.c14 {
  box-sizing: border-box;
  margin-right: 32px;
}

.c20 {
  box-sizing: border-box;
  margin-top: 16px;
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 176px;
}

.c24:hover,
.c24:focus {
  background: #B29DFF;
}

.c24:active {
  background: #C5B6FF;
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c13 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 8px;
}

.c15 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.18);
}

.c18 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: start;
}

.c11 {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.c21 {
  display: flex;
  align-items: center;
  justify-content: end;
  flex-direction: column;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c8 c9"
  >
    <div
      class="c10 c11"
      width="100%"
    >
      <div
        class="c12 c4 sc-gEvEer c12 c13"
      >
        <div
          class="c14"
          style="text-align: center;"
        >
          <span
            class="c15 icon icon-laptop"
            color="rgba(255,255,255,0.18)"
          >
            <svg
              fill="currentColor"
              height="150"
              viewBox="0 0 24 24"
              width="150"
            >
              <path
                d="M10.5 7.5C10.0858 7.5 9.75 7.83579 9.75 8.25C9.75 8.66421 10.0858 9 10.5 9H13.5C13.9142 9 14.25 8.66421 14.25 8.25C14.25 7.83579 13.9142 7.5 13.5 7.5H10.5Z"
              />
              <path
                clip-rule="evenodd"
                d="M3 6.75V15.75H2.25C1.83579 15.75 1.5 16.0858 1.5 16.5V18C1.5 18.5967 1.73705 19.169 2.15901 19.591C2.58097 20.0129 3.15326 20.25 3.75 20.25H20.25C20.8467 20.25 21.419 20.0129 21.841 19.591C22.2629 19.169 22.5 18.5967 22.5 18V16.5C22.5 16.0858 22.1642 15.75 21.75 15.75H21V6.75C21 6.15326 20.7629 5.58097 20.341 5.15901C19.919 4.73705 19.3467 4.5 18.75 4.5H5.25C4.65326 4.5 4.08097 4.73705 3.65901 5.15901C3.23705 5.58097 3 6.15326 3 6.75ZM5.25 6C5.05109 6 4.86032 6.07902 4.71967 6.21967C4.57902 6.36032 4.5 6.55109 4.5 6.75V15.75H19.5V6.75C19.5 6.55109 19.421 6.36032 19.2803 6.21967C19.1397 6.07902 18.9489 6 18.75 6H5.25ZM21 17.25V18C21 18.1989 20.921 18.3897 20.7803 18.5303C20.6397 18.671 20.4489 18.75 20.25 18.75H3.75C3.55109 18.75 3.36032 18.671 3.21967 18.5303C3.07902 18.3897 3 18.1989 3 18V17.25H21Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="c8"
        >
          <div
            class="c16"
          >
            Register Trusted Device
          </div>
          <div
            class="c17"
          >
            Device Trust enables authenticated device access. Resources protected by the Device Trust mode "required" will enforce the use of a Trusted Device, in addition to establishing the user's identity and enforcing the necessary roles.
          </div>
          <div
            class="c17"
          >
            Trusted Devices can be registered manually using
             
            <a
              class="c18"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
              rel="noreferrer"
              target="_blank"
            >
              tctl client
            </a>
             
            or synced automatically from MDM services like
             
            <a
              class="c18"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
              rel="noreferrer"
              target="_blank"
            >
              Jamf
            </a>
            .
          </div>
          <div
            class="c19"
          >
            Please
             
            <a
              class="c18"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/guides/device-trust/"
              rel="noreferrer"
              target="_blank"
            >
              view our documentation
            </a>
             
            on how to get started with Device Trust.
          </div>
        </div>
      </div>
      <div
        class="c20 c21"
      >
        <div
          class="c22"
          color="text.slightlyMuted"
        >
          <i>
            Your plan includes five free Trusted Devices.
          </i>
        </div>
        <div
          class="c23"
        >
          Want additional devices?
        </div>
        <a
          class="c24"
          href="https://goteleport.com/r/upgrade-igs?e_4.4.0-dev&utm_campaign=CTA_TRUSTED_DEVICES"
          kind="primary"
          rel="noreferrer"
          style="text-transform: none;"
          target="blank"
          width="176px"
        >
          <div
            class="c8 c4"
          >
            Contact Sales
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`test DeviceTrust.tsx empty team cta 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-top: 24px;
  width: 100%;
}

.c12 {
  box-sizing: border-box;
  max-width: 700px;
  padding: 24px;
}

.c14 {
  box-sizing: border-box;
  margin-right: 32px;
}

.c20 {
  box-sizing: border-box;
  margin-top: 16px;
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 176px;
}

.c24:hover,
.c24:focus {
  background: #B29DFF;
}

.c24:active {
  background: #C5B6FF;
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c13 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 8px;
}

.c15 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.18);
}

.c18 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: start;
}

.c11 {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.c21 {
  display: flex;
  align-items: center;
  justify-content: end;
  flex-direction: column;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c8 c9"
  >
    <div
      class="c10 c11"
      width="100%"
    >
      <div
        class="c12 c4 sc-gEvEer c12 c13"
      >
        <div
          class="c14"
          style="text-align: center;"
        >
          <span
            class="c15 icon icon-laptop"
            color="rgba(255,255,255,0.18)"
          >
            <svg
              fill="currentColor"
              height="150"
              viewBox="0 0 24 24"
              width="150"
            >
              <path
                d="M10.5 7.5C10.0858 7.5 9.75 7.83579 9.75 8.25C9.75 8.66421 10.0858 9 10.5 9H13.5C13.9142 9 14.25 8.66421 14.25 8.25C14.25 7.83579 13.9142 7.5 13.5 7.5H10.5Z"
              />
              <path
                clip-rule="evenodd"
                d="M3 6.75V15.75H2.25C1.83579 15.75 1.5 16.0858 1.5 16.5V18C1.5 18.5967 1.73705 19.169 2.15901 19.591C2.58097 20.0129 3.15326 20.25 3.75 20.25H20.25C20.8467 20.25 21.419 20.0129 21.841 19.591C22.2629 19.169 22.5 18.5967 22.5 18V16.5C22.5 16.0858 22.1642 15.75 21.75 15.75H21V6.75C21 6.15326 20.7629 5.58097 20.341 5.15901C19.919 4.73705 19.3467 4.5 18.75 4.5H5.25C4.65326 4.5 4.08097 4.73705 3.65901 5.15901C3.23705 5.58097 3 6.15326 3 6.75ZM5.25 6C5.05109 6 4.86032 6.07902 4.71967 6.21967C4.57902 6.36032 4.5 6.55109 4.5 6.75V15.75H19.5V6.75C19.5 6.55109 19.421 6.36032 19.2803 6.21967C19.1397 6.07902 18.9489 6 18.75 6H5.25ZM21 17.25V18C21 18.1989 20.921 18.3897 20.7803 18.5303C20.6397 18.671 20.4489 18.75 20.25 18.75H3.75C3.55109 18.75 3.36032 18.671 3.21967 18.5303C3.07902 18.3897 3 18.1989 3 18V17.25H21Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="c8"
        >
          <div
            class="c16"
          >
            Register Trusted Device
          </div>
          <div
            class="c17"
          >
            Device Trust enables authenticated device access. Resources protected by the Device Trust mode "required" will enforce the use of a Trusted Device, in addition to establishing the user's identity and enforcing the necessary roles.
          </div>
          <div
            class="c17"
          >
            Trusted Devices can be registered manually using
             
            <a
              class="c18"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
              rel="noreferrer"
              target="_blank"
            >
              tctl client
            </a>
             
            or synced automatically from MDM services like
             
            <a
              class="c18"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
              rel="noreferrer"
              target="_blank"
            >
              Jamf
            </a>
            .
          </div>
          <div
            class="c19"
          >
            Please
             
            <a
              class="c18"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/guides/device-trust/"
              rel="noreferrer"
              target="_blank"
            >
              view our documentation
            </a>
             
            on how to get started with Device Trust.
          </div>
        </div>
      </div>
      <div
        class="c20 c21"
      >
        <div
          class="c22"
          color="text.slightlyMuted"
        >
          <i>
            Your plan includes five free Trusted Devices.
          </i>
        </div>
        <div
          class="c23"
        >
          Want additional devices?
        </div>
        <a
          class="c24"
          href="https://goteleport.com/r/upgrade-team?e_4.4.0-dev&utm_campaign=CTA_TRUSTED_DEVICES"
          kind="primary"
          rel="noreferrer"
          style="text-transform: none;"
          target="blank"
          width="176px"
        >
          <div
            class="c8 c4"
          >
            Contact Sales
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`test DeviceTrust.tsx loaded EUB with IGS (no CTA) 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 40px;
  width: 100%;
}

.c18 {
  box-sizing: border-box;
  width: 100%;
}

.c20 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c28 {
  box-sizing: border-box;
  margin-left: auto;
  width: 240px;
  color: #FFFFFF;
}

.c22 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c22:disabled {
  color: rgba(255,255,255,0.36);
}

.c22:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c22:hover:enabled,
.c22:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c22:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c25 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c25:disabled {
  color: rgba(255,255,255,0.36);
}

.c25:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c25:hover:enabled,
.c25:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c25:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c29 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c24 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c27 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 4px;
}

.c31 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: start;
}

.c19 {
  display: flex;
  justify-content: flex-end;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c26 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c26 > thead > tr > th,
.c26 > tbody > tr > th,
.c26 > tfoot > tr > th,
.c26 > thead > tr > td,
.c26 > tbody > tr > td,
.c26 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c26 > thead > tr > th:first-child,
.c26 > tbody > tr > th:first-child,
.c26 > tfoot > tr > th:first-child,
.c26 > thead > tr > td:first-child,
.c26 > tbody > tr > td:first-child,
.c26 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c26 > thead > tr > th:last-child,
.c26 > tbody > tr > th:last-child,
.c26 > tfoot > tr > th:last-child,
.c26 > thead > tr > td:last-child,
.c26 > tbody > tr > td:last-child,
.c26 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c26 > tbody > tr > td {
  vertical-align: middle;
}

.c26 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c26 > thead > tr > th svg {
  height: 12px;
}

.c26 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c26 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c26 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c12 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c11 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c23 svg {
  font-size: 20px;
}

.c23 svg:before {
  padding-left: 1px;
}

.c17 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c16 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c14 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c13 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c15 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c15:hover,
.c15:focus,
.c15:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c15::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c8 c9"
  >
    <div
      class="c10"
      width="100%"
    >
      <div
        class="c11"
      >
        <nav
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <input
                class="c15"
                placeholder="SEARCH..."
                value=""
              />
              <div
                class="c16"
              >
                <div
                  class="c17"
                />
              </div>
            </div>
          </div>
          <div
            class="c18 c19"
            width="100%"
          >
            <div
              class="c20 c4"
            >
              <div
                class="c21"
                color="text.main"
                style="white-space: nowrap; text-transform: uppercase;"
              >
                Showing 
                <strong>
                  1
                </strong>
                 - 
                <strong>
                  1
                </strong>
                 of
                 
                <strong>
                  1
                </strong>
              </div>
            </div>
            <div
              class="c8 c1"
            >
              <button
                class="c22 c23"
                disabled=""
                title="Previous page"
              >
                <span
                  class="c24 icon icon-circlearrowleft"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="c25 c23"
                disabled=""
                title="Next page"
              >
                <span
                  class="c24 icon icon-circlearrowright"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </nav>
        <table
          class="c26"
        >
          <thead>
            <tr>
              <th
                style="cursor: default;"
              >
                OS Type
              </th>
              <th
                style="cursor: default;"
              >
                Asset Tag
              </th>
              <th
                style="cursor: default;"
              >
                Enroll Status
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                align="left"
                style="display: flex;"
              >
                <span
                  class="c27 icon icon-apple"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M17.077 3.47585e-07H16.9714C16.0332 -0.000382264 15.1214 0.31512 14.3796 0.896899C13.6376 1.47877 13.1077 2.29397 12.8731 3.21429C12.7563 3.67264 13.0284 4.14015 13.4808 4.2585C13.9333 4.37684 14.3948 4.10121 14.5117 3.64286C14.6524 3.09067 14.9704 2.60155 15.4155 2.25243C15.8607 1.9033 16.4082 1.714 16.9712 1.71429H17.077C17.5443 1.71429 17.9231 1.33053 17.9231 0.857143C17.9231 0.383757 17.5443 3.47585e-07 17.077 3.47585e-07Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M20.2503 12.6885C20.2503 10.8617 21.2104 9.18633 22.3618 7.8807C22.5598 7.65619 22.7635 7.44262 22.9689 7.24108L23 7.2107V7.20834L22.9727 7.18196C22.5842 6.80922 22.1173 6.47909 21.6024 6.19883C20.3708 5.52851 18.8646 5.14357 17.5006 5.14357C15.8348 5.13958 14.2177 5.72178 12.9178 6.7935C11.6451 5.74377 10.0671 5.16289 8.43586 5.14357C4.21051 5.08464 0.894855 8.7145 1.00255 13.0621C1.04855 14.9259 1.45349 16.7617 2.19391 18.4634C2.93434 20.1651 3.99555 21.6989 5.31611 22.9758C5.99635 23.6353 6.89622 24.0017 7.83093 24H17.8787C18.3777 24.0021 18.8719 23.8985 19.3303 23.6958C19.7888 23.493 20.2018 23.1954 20.5436 22.8214C22.3596 20.818 23 18.9087 23 18.9087C21.0764 17.5499 20.2503 15.2706 20.2503 12.6885ZM17.4966 6.85785H17.5006C18.4941 6.85785 19.5616 7.11688 20.4532 7.53346C19.4135 8.92276 18.558 10.6857 18.558 12.6885C18.558 15.1422 19.223 17.5872 20.928 19.3658C20.5921 19.9868 20.0663 20.8127 19.2997 21.6591C19.1159 21.8595 18.8956 22.0175 18.6532 22.1247C18.4099 22.2323 18.1488 22.2868 17.8857 22.2857L7.83093 22.2857L7.8278 22.2857C7.33368 22.2866 6.85323 22.0931 6.48616 21.7373L6.48464 21.7358C5.32607 20.6155 4.3936 19.2685 3.74247 17.772C3.09132 16.2755 2.73482 14.6598 2.69433 13.0191C2.60876 9.56495 5.22391 6.81322 8.41256 6.85769L8.41607 6.85773C9.66236 6.8725 10.8712 7.31616 11.8493 8.12289C12.4715 8.63602 13.3639 8.6361 13.9861 8.12306C14.9851 7.29941 16.2239 6.85481 17.4966 6.85785Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                 
                macOS
              </td>
              <td>
                CSXXXXXXXXX
              </td>
              <td>
                enrolled
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="c28"
      color="text.main"
      style="flex-shrink: 0;"
      width="240px"
    >
      <div
        class="c29"
      >
        Register Trusted Device
      </div>
      <div
        class="c30"
      >
        Trusted Devices can be registered manually using
         
        <a
          class="c31"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
          rel="noreferrer"
          target="_blank"
        >
          tctl client
        </a>
         
        or synced automatically from MDM services like
         
        <a
          class="c31"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
          rel="noreferrer"
          target="_blank"
        >
          Jamf
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;

exports[`test DeviceTrust.tsx loaded EUB without IGS renders CTA 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 40px;
  width: 100%;
}

.c18 {
  box-sizing: border-box;
  width: 100%;
}

.c20 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c28 {
  box-sizing: border-box;
  margin-top: 16px;
}

.c33 {
  box-sizing: border-box;
  margin-left: auto;
  width: 240px;
  color: #FFFFFF;
}

.c32 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 176px;
}

.c32:hover,
.c32:focus {
  background: #B29DFF;
}

.c32:active {
  background: #C5B6FF;
}

.c32:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c22 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c22:disabled {
  color: rgba(255,255,255,0.36);
}

.c22:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c22:hover:enabled,
.c22:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c22:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c25 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c25:disabled {
  color: rgba(255,255,255,0.36);
}

.c25:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c25:hover:enabled,
.c25:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c25:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c31 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 8px;
}

.c34 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c35 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c24 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c27 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 4px;
}

.c36 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: start;
}

.c19 {
  display: flex;
  justify-content: flex-end;
}

.c29 {
  display: flex;
  align-items: end;
  justify-content: end;
  flex-direction: column;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c26 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c26 > thead > tr > th,
.c26 > tbody > tr > th,
.c26 > tfoot > tr > th,
.c26 > thead > tr > td,
.c26 > tbody > tr > td,
.c26 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c26 > thead > tr > th:first-child,
.c26 > tbody > tr > th:first-child,
.c26 > tfoot > tr > th:first-child,
.c26 > thead > tr > td:first-child,
.c26 > tbody > tr > td:first-child,
.c26 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c26 > thead > tr > th:last-child,
.c26 > tbody > tr > th:last-child,
.c26 > tfoot > tr > th:last-child,
.c26 > thead > tr > td:last-child,
.c26 > tbody > tr > td:last-child,
.c26 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c26 > tbody > tr > td {
  vertical-align: middle;
}

.c26 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c26 > thead > tr > th svg {
  height: 12px;
}

.c26 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c26 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c26 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c12 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c11 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c23 svg {
  font-size: 20px;
}

.c23 svg:before {
  padding-left: 1px;
}

.c17 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c16 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c14 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c13 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c15 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c15:hover,
.c15:focus,
.c15:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c15::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c8 c9"
  >
    <div
      class="c10"
      width="100%"
    >
      <div
        class="c11"
      >
        <nav
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <input
                class="c15"
                placeholder="SEARCH..."
                value=""
              />
              <div
                class="c16"
              >
                <div
                  class="c17"
                />
              </div>
            </div>
          </div>
          <div
            class="c18 c19"
            width="100%"
          >
            <div
              class="c20 c4"
            >
              <div
                class="c21"
                color="text.main"
                style="white-space: nowrap; text-transform: uppercase;"
              >
                Showing 
                <strong>
                  1
                </strong>
                 - 
                <strong>
                  1
                </strong>
                 of
                 
                <strong>
                  1
                </strong>
              </div>
            </div>
            <div
              class="c8 c1"
            >
              <button
                class="c22 c23"
                disabled=""
                title="Previous page"
              >
                <span
                  class="c24 icon icon-circlearrowleft"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="c25 c23"
                disabled=""
                title="Next page"
              >
                <span
                  class="c24 icon icon-circlearrowright"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </nav>
        <table
          class="c26"
        >
          <thead>
            <tr>
              <th
                style="cursor: default;"
              >
                OS Type
              </th>
              <th
                style="cursor: default;"
              >
                Asset Tag
              </th>
              <th
                style="cursor: default;"
              >
                Enroll Status
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                align="left"
                style="display: flex;"
              >
                <span
                  class="c27 icon icon-apple"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M17.077 3.47585e-07H16.9714C16.0332 -0.000382264 15.1214 0.31512 14.3796 0.896899C13.6376 1.47877 13.1077 2.29397 12.8731 3.21429C12.7563 3.67264 13.0284 4.14015 13.4808 4.2585C13.9333 4.37684 14.3948 4.10121 14.5117 3.64286C14.6524 3.09067 14.9704 2.60155 15.4155 2.25243C15.8607 1.9033 16.4082 1.714 16.9712 1.71429H17.077C17.5443 1.71429 17.9231 1.33053 17.9231 0.857143C17.9231 0.383757 17.5443 3.47585e-07 17.077 3.47585e-07Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M20.2503 12.6885C20.2503 10.8617 21.2104 9.18633 22.3618 7.8807C22.5598 7.65619 22.7635 7.44262 22.9689 7.24108L23 7.2107V7.20834L22.9727 7.18196C22.5842 6.80922 22.1173 6.47909 21.6024 6.19883C20.3708 5.52851 18.8646 5.14357 17.5006 5.14357C15.8348 5.13958 14.2177 5.72178 12.9178 6.7935C11.6451 5.74377 10.0671 5.16289 8.43586 5.14357C4.21051 5.08464 0.894855 8.7145 1.00255 13.0621C1.04855 14.9259 1.45349 16.7617 2.19391 18.4634C2.93434 20.1651 3.99555 21.6989 5.31611 22.9758C5.99635 23.6353 6.89622 24.0017 7.83093 24H17.8787C18.3777 24.0021 18.8719 23.8985 19.3303 23.6958C19.7888 23.493 20.2018 23.1954 20.5436 22.8214C22.3596 20.818 23 18.9087 23 18.9087C21.0764 17.5499 20.2503 15.2706 20.2503 12.6885ZM17.4966 6.85785H17.5006C18.4941 6.85785 19.5616 7.11688 20.4532 7.53346C19.4135 8.92276 18.558 10.6857 18.558 12.6885C18.558 15.1422 19.223 17.5872 20.928 19.3658C20.5921 19.9868 20.0663 20.8127 19.2997 21.6591C19.1159 21.8595 18.8956 22.0175 18.6532 22.1247C18.4099 22.2323 18.1488 22.2868 17.8857 22.2857L7.83093 22.2857L7.8278 22.2857C7.33368 22.2866 6.85323 22.0931 6.48616 21.7373L6.48464 21.7358C5.32607 20.6155 4.3936 19.2685 3.74247 17.772C3.09132 16.2755 2.73482 14.6598 2.69433 13.0191C2.60876 9.56495 5.22391 6.81322 8.41256 6.85769L8.41607 6.85773C9.66236 6.8725 10.8712 7.31616 11.8493 8.12289C12.4715 8.63602 13.3639 8.6361 13.9861 8.12306C14.9851 7.29941 16.2239 6.85481 17.4966 6.85785Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                 
                macOS
              </td>
              <td>
                CSXXXXXXXXX
              </td>
              <td>
                enrolled
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="c28 c29"
      >
        <div
          class="c30"
          color="text.slightlyMuted"
        >
          <i>
            Your plan includes five free Trusted Devices.
          </i>
        </div>
        <div
          class="c31"
        >
          Want additional devices?
        </div>
        <a
          class="c32"
          href="https://goteleport.com/r/upgrade-igs?e_4.4.0-dev&utm_campaign=CTA_TRUSTED_DEVICES"
          kind="primary"
          rel="noreferrer"
          style="text-transform: none;"
          target="blank"
          width="176px"
        >
          <div
            class="c8 c4"
          >
            Contact Sales
          </div>
        </a>
      </div>
    </div>
    <div
      class="c33"
      color="text.main"
      style="flex-shrink: 0;"
      width="240px"
    >
      <div
        class="c34"
      >
        Register Trusted Device
      </div>
      <div
        class="c35"
      >
        Trusted Devices can be registered manually using
         
        <a
          class="c36"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
          rel="noreferrer"
          target="_blank"
        >
          tctl client
        </a>
         
        or synced automatically from MDM services like
         
        <a
          class="c36"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
          rel="noreferrer"
          target="_blank"
        >
          Jamf
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;

exports[`test DeviceTrust.tsx loaded legacy (no CTA) 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 40px;
  width: 100%;
}

.c18 {
  box-sizing: border-box;
  width: 100%;
}

.c20 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c28 {
  box-sizing: border-box;
  margin-left: auto;
  width: 240px;
  color: #FFFFFF;
}

.c22 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c22:disabled {
  color: rgba(255,255,255,0.36);
}

.c22:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c22:hover:enabled,
.c22:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c22:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c25 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c25:disabled {
  color: rgba(255,255,255,0.36);
}

.c25:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c25:hover:enabled,
.c25:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c25:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c29 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c24 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c27 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 4px;
}

.c31 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: start;
}

.c19 {
  display: flex;
  justify-content: flex-end;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c26 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c26 > thead > tr > th,
.c26 > tbody > tr > th,
.c26 > tfoot > tr > th,
.c26 > thead > tr > td,
.c26 > tbody > tr > td,
.c26 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c26 > thead > tr > th:first-child,
.c26 > tbody > tr > th:first-child,
.c26 > tfoot > tr > th:first-child,
.c26 > thead > tr > td:first-child,
.c26 > tbody > tr > td:first-child,
.c26 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c26 > thead > tr > th:last-child,
.c26 > tbody > tr > th:last-child,
.c26 > tfoot > tr > th:last-child,
.c26 > thead > tr > td:last-child,
.c26 > tbody > tr > td:last-child,
.c26 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c26 > tbody > tr > td {
  vertical-align: middle;
}

.c26 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c26 > thead > tr > th svg {
  height: 12px;
}

.c26 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c26 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c26 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c12 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c11 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c23 svg {
  font-size: 20px;
}

.c23 svg:before {
  padding-left: 1px;
}

.c17 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c16 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c14 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c13 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c15 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c15:hover,
.c15:focus,
.c15:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c15::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c8 c9"
  >
    <div
      class="c10"
      width="100%"
    >
      <div
        class="c11"
      >
        <nav
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <input
                class="c15"
                placeholder="SEARCH..."
                value=""
              />
              <div
                class="c16"
              >
                <div
                  class="c17"
                />
              </div>
            </div>
          </div>
          <div
            class="c18 c19"
            width="100%"
          >
            <div
              class="c20 c4"
            >
              <div
                class="c21"
                color="text.main"
                style="white-space: nowrap; text-transform: uppercase;"
              >
                Showing 
                <strong>
                  1
                </strong>
                 - 
                <strong>
                  1
                </strong>
                 of
                 
                <strong>
                  1
                </strong>
              </div>
            </div>
            <div
              class="c8 c1"
            >
              <button
                class="c22 c23"
                disabled=""
                title="Previous page"
              >
                <span
                  class="c24 icon icon-circlearrowleft"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="c25 c23"
                disabled=""
                title="Next page"
              >
                <span
                  class="c24 icon icon-circlearrowright"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </nav>
        <table
          class="c26"
        >
          <thead>
            <tr>
              <th
                style="cursor: default;"
              >
                OS Type
              </th>
              <th
                style="cursor: default;"
              >
                Asset Tag
              </th>
              <th
                style="cursor: default;"
              >
                Enroll Status
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                align="left"
                style="display: flex;"
              >
                <span
                  class="c27 icon icon-apple"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M17.077 3.47585e-07H16.9714C16.0332 -0.000382264 15.1214 0.31512 14.3796 0.896899C13.6376 1.47877 13.1077 2.29397 12.8731 3.21429C12.7563 3.67264 13.0284 4.14015 13.4808 4.2585C13.9333 4.37684 14.3948 4.10121 14.5117 3.64286C14.6524 3.09067 14.9704 2.60155 15.4155 2.25243C15.8607 1.9033 16.4082 1.714 16.9712 1.71429H17.077C17.5443 1.71429 17.9231 1.33053 17.9231 0.857143C17.9231 0.383757 17.5443 3.47585e-07 17.077 3.47585e-07Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M20.2503 12.6885C20.2503 10.8617 21.2104 9.18633 22.3618 7.8807C22.5598 7.65619 22.7635 7.44262 22.9689 7.24108L23 7.2107V7.20834L22.9727 7.18196C22.5842 6.80922 22.1173 6.47909 21.6024 6.19883C20.3708 5.52851 18.8646 5.14357 17.5006 5.14357C15.8348 5.13958 14.2177 5.72178 12.9178 6.7935C11.6451 5.74377 10.0671 5.16289 8.43586 5.14357C4.21051 5.08464 0.894855 8.7145 1.00255 13.0621C1.04855 14.9259 1.45349 16.7617 2.19391 18.4634C2.93434 20.1651 3.99555 21.6989 5.31611 22.9758C5.99635 23.6353 6.89622 24.0017 7.83093 24H17.8787C18.3777 24.0021 18.8719 23.8985 19.3303 23.6958C19.7888 23.493 20.2018 23.1954 20.5436 22.8214C22.3596 20.818 23 18.9087 23 18.9087C21.0764 17.5499 20.2503 15.2706 20.2503 12.6885ZM17.4966 6.85785H17.5006C18.4941 6.85785 19.5616 7.11688 20.4532 7.53346C19.4135 8.92276 18.558 10.6857 18.558 12.6885C18.558 15.1422 19.223 17.5872 20.928 19.3658C20.5921 19.9868 20.0663 20.8127 19.2997 21.6591C19.1159 21.8595 18.8956 22.0175 18.6532 22.1247C18.4099 22.2323 18.1488 22.2868 17.8857 22.2857L7.83093 22.2857L7.8278 22.2857C7.33368 22.2866 6.85323 22.0931 6.48616 21.7373L6.48464 21.7358C5.32607 20.6155 4.3936 19.2685 3.74247 17.772C3.09132 16.2755 2.73482 14.6598 2.69433 13.0191C2.60876 9.56495 5.22391 6.81322 8.41256 6.85769L8.41607 6.85773C9.66236 6.8725 10.8712 7.31616 11.8493 8.12289C12.4715 8.63602 13.3639 8.6361 13.9861 8.12306C14.9851 7.29941 16.2239 6.85481 17.4966 6.85785Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                 
                macOS
              </td>
              <td>
                CSXXXXXXXXX
              </td>
              <td>
                enrolled
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="c28"
      color="text.main"
      style="flex-shrink: 0;"
      width="240px"
    >
      <div
        class="c29"
      >
        Register Trusted Device
      </div>
      <div
        class="c30"
      >
        Trusted Devices can be registered manually using
         
        <a
          class="c31"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
          rel="noreferrer"
          target="_blank"
        >
          tctl client
        </a>
         
        or synced automatically from MDM services like
         
        <a
          class="c31"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
          rel="noreferrer"
          target="_blank"
        >
          Jamf
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;

exports[`test DeviceTrust.tsx loaded team renders CTA 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 40px;
  width: 100%;
}

.c18 {
  box-sizing: border-box;
  width: 100%;
}

.c20 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c28 {
  box-sizing: border-box;
  margin-top: 16px;
}

.c33 {
  box-sizing: border-box;
  margin-left: auto;
  width: 240px;
  color: #FFFFFF;
}

.c32 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 176px;
}

.c32:hover,
.c32:focus {
  background: #B29DFF;
}

.c32:active {
  background: #C5B6FF;
}

.c32:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c22 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c22:disabled {
  color: rgba(255,255,255,0.36);
}

.c22:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c22:hover:enabled,
.c22:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c22:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c25 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c25:disabled {
  color: rgba(255,255,255,0.36);
}

.c25:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c25:hover:enabled,
.c25:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c25:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c31 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 8px;
}

.c34 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c35 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c24 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c27 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 4px;
}

.c36 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: start;
}

.c19 {
  display: flex;
  justify-content: flex-end;
}

.c29 {
  display: flex;
  align-items: end;
  justify-content: end;
  flex-direction: column;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c26 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c26 > thead > tr > th,
.c26 > tbody > tr > th,
.c26 > tfoot > tr > th,
.c26 > thead > tr > td,
.c26 > tbody > tr > td,
.c26 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c26 > thead > tr > th:first-child,
.c26 > tbody > tr > th:first-child,
.c26 > tfoot > tr > th:first-child,
.c26 > thead > tr > td:first-child,
.c26 > tbody > tr > td:first-child,
.c26 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c26 > thead > tr > th:last-child,
.c26 > tbody > tr > th:last-child,
.c26 > tfoot > tr > th:last-child,
.c26 > thead > tr > td:last-child,
.c26 > tbody > tr > td:last-child,
.c26 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c26 > tbody > tr > td {
  vertical-align: middle;
}

.c26 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c26 > thead > tr > th svg {
  height: 12px;
}

.c26 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c26 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c26 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c12 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c11 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c23 svg {
  font-size: 20px;
}

.c23 svg:before {
  padding-left: 1px;
}

.c17 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c16 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c14 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c13 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c15 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c15:hover,
.c15:focus,
.c15:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c15::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c8 c9"
  >
    <div
      class="c10"
      width="100%"
    >
      <div
        class="c11"
      >
        <nav
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <input
                class="c15"
                placeholder="SEARCH..."
                value=""
              />
              <div
                class="c16"
              >
                <div
                  class="c17"
                />
              </div>
            </div>
          </div>
          <div
            class="c18 c19"
            width="100%"
          >
            <div
              class="c20 c4"
            >
              <div
                class="c21"
                color="text.main"
                style="white-space: nowrap; text-transform: uppercase;"
              >
                Showing 
                <strong>
                  1
                </strong>
                 - 
                <strong>
                  1
                </strong>
                 of
                 
                <strong>
                  1
                </strong>
              </div>
            </div>
            <div
              class="c8 c1"
            >
              <button
                class="c22 c23"
                disabled=""
                title="Previous page"
              >
                <span
                  class="c24 icon icon-circlearrowleft"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="c25 c23"
                disabled=""
                title="Next page"
              >
                <span
                  class="c24 icon icon-circlearrowright"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </nav>
        <table
          class="c26"
        >
          <thead>
            <tr>
              <th
                style="cursor: default;"
              >
                OS Type
              </th>
              <th
                style="cursor: default;"
              >
                Asset Tag
              </th>
              <th
                style="cursor: default;"
              >
                Enroll Status
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                align="left"
                style="display: flex;"
              >
                <span
                  class="c27 icon icon-apple"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      d="M17.077 3.47585e-07H16.9714C16.0332 -0.000382264 15.1214 0.31512 14.3796 0.896899C13.6376 1.47877 13.1077 2.29397 12.8731 3.21429C12.7563 3.67264 13.0284 4.14015 13.4808 4.2585C13.9333 4.37684 14.3948 4.10121 14.5117 3.64286C14.6524 3.09067 14.9704 2.60155 15.4155 2.25243C15.8607 1.9033 16.4082 1.714 16.9712 1.71429H17.077C17.5443 1.71429 17.9231 1.33053 17.9231 0.857143C17.9231 0.383757 17.5443 3.47585e-07 17.077 3.47585e-07Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M20.2503 12.6885C20.2503 10.8617 21.2104 9.18633 22.3618 7.8807C22.5598 7.65619 22.7635 7.44262 22.9689 7.24108L23 7.2107V7.20834L22.9727 7.18196C22.5842 6.80922 22.1173 6.47909 21.6024 6.19883C20.3708 5.52851 18.8646 5.14357 17.5006 5.14357C15.8348 5.13958 14.2177 5.72178 12.9178 6.7935C11.6451 5.74377 10.0671 5.16289 8.43586 5.14357C4.21051 5.08464 0.894855 8.7145 1.00255 13.0621C1.04855 14.9259 1.45349 16.7617 2.19391 18.4634C2.93434 20.1651 3.99555 21.6989 5.31611 22.9758C5.99635 23.6353 6.89622 24.0017 7.83093 24H17.8787C18.3777 24.0021 18.8719 23.8985 19.3303 23.6958C19.7888 23.493 20.2018 23.1954 20.5436 22.8214C22.3596 20.818 23 18.9087 23 18.9087C21.0764 17.5499 20.2503 15.2706 20.2503 12.6885ZM17.4966 6.85785H17.5006C18.4941 6.85785 19.5616 7.11688 20.4532 7.53346C19.4135 8.92276 18.558 10.6857 18.558 12.6885C18.558 15.1422 19.223 17.5872 20.928 19.3658C20.5921 19.9868 20.0663 20.8127 19.2997 21.6591C19.1159 21.8595 18.8956 22.0175 18.6532 22.1247C18.4099 22.2323 18.1488 22.2868 17.8857 22.2857L7.83093 22.2857L7.8278 22.2857C7.33368 22.2866 6.85323 22.0931 6.48616 21.7373L6.48464 21.7358C5.32607 20.6155 4.3936 19.2685 3.74247 17.772C3.09132 16.2755 2.73482 14.6598 2.69433 13.0191C2.60876 9.56495 5.22391 6.81322 8.41256 6.85769L8.41607 6.85773C9.66236 6.8725 10.8712 7.31616 11.8493 8.12289C12.4715 8.63602 13.3639 8.6361 13.9861 8.12306C14.9851 7.29941 16.2239 6.85481 17.4966 6.85785Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                 
                macOS
              </td>
              <td>
                CSXXXXXXXXX
              </td>
              <td>
                enrolled
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="c28 c29"
      >
        <div
          class="c30"
          color="text.slightlyMuted"
        >
          <i>
            Your plan includes five free Trusted Devices.
          </i>
        </div>
        <div
          class="c31"
        >
          Want additional devices?
        </div>
        <a
          class="c32"
          href="https://goteleport.com/r/upgrade-team?e_4.4.0-dev&utm_campaign=CTA_TRUSTED_DEVICES"
          kind="primary"
          rel="noreferrer"
          style="text-transform: none;"
          target="blank"
          width="176px"
        >
          <div
            class="c8 c4"
          >
            Contact Sales
          </div>
        </a>
      </div>
    </div>
    <div
      class="c33"
      color="text.main"
      style="flex-shrink: 0;"
      width="240px"
    >
      <div
        class="c34"
      >
        Register Trusted Device
      </div>
      <div
        class="c35"
      >
        Trusted Devices can be registered manually using
         
        <a
          class="c36"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
          rel="noreferrer"
          target="_blank"
        >
          tctl client
        </a>
         
        or synced automatically from MDM services like
         
        <a
          class="c36"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
          rel="noreferrer"
          target="_blank"
        >
          Jamf
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;
